@@ -1,5 +1,12 @@
 2005-10-14  Vincent Noel <vnoel@cox.net>
 
+	* Makefile.am:
+	* config.c:
+	* configdata.h:
+	* logview.c: (main): Remove some leftovers.
+
+2005-10-14  Vincent Noel <vnoel@cox.net>
+
 	* TODO: Remove the gnome-vfs monitoring (it's done)
 
 2005-10-14  Vincent Noel <vnoel@cox.net>
